<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="eBarrelType" Id="{56beff9b-32f4-4b4c-b898-ee6db58f3dad}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eBarrelType :
(
	Size55cc :=0,
	Size30cc,
	Size10cc,
	Size5cc,
	Size3cc
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>